# desafio1-prof-artemisia

./: README.md  como_usar_esta_API.md  criacao_tabelas.py  guia_deploy_render.md  main.py  mypy.ini  pyproject.toml  render.yaml  requirements.txt
db/: add_id_column.sql  create_tables.sql
src/: criacao_tabelas.py
utils/db/: GeradorDeSessao.py  GeradorDeTabelas.py  ModeloDeDadosDeEnvio.py
